lib/oracle-sql-parser/grammar/condition/multiset.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module OracleSqlParser::Grammar::Condition
  module Multiset
    include Treetop::Runtime

    def root
      @root ||= :mutiset_condition
    end

    module MutisetCondition0
      def ast
        super
      end
    end

    def _nt_mutiset_condition
      start_index = index
      if node_cache[:mutiset_condition].has_key?(index)
        cached = node_cache[:mutiset_condition][index]
        if cached
          node_cache[:mutiset_condition][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0 = index
      r1 = _nt_is_a_set_condition
      if r1
        r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
        r0 = r1
      else
        r2 = _nt_is_empty_condition
        if r2
          r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
          r0 = r2
        else
          r3 = _nt_member_condition
          if r3
            r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
            r0 = r3
          else
            r4 = _nt_submultiset_condition
            r4.extend(MutisetCondition0)
            r4.extend(MutisetCondition0)
            if r4
              r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
              r0 = r4
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end

      node_cache[:mutiset_condition][start_index] = r0

      r0
    end

    module IsASetCondition0
      def nested_table
        elements[0]
      end

      def is_keyword
        elements[2]
      end

      def not_keyword
        elements[4]
      end

      def a
        elements[6]
      end

      def set_keyword
        elements[8]
      end
    end

    module IsASetCondition1
      def ast
        OracleSqlParser::Ast::IsASetCondition[
          target: nested_table.ast,
          is: is_keyword.ast,
          not: not_keyword.ast,
          a: OracleSqlParser::Ast::Keyword[name: a.text_value],
          set: set_keyword.ast
        ]
      end
    end

    def _nt_is_a_set_condition
      start_index = index
      if node_cache[:is_a_set_condition].has_key?(index)
        cached = node_cache[:is_a_set_condition][index]
        if cached
          node_cache[:is_a_set_condition][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_nested_table
      s0 << r1
      if r1
        r3 = _nt_space
        if r3
          r2 = r3
        else
          r2 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r2
        if r2
          r4 = _nt_is_keyword
          s0 << r4
          if r4
            r6 = _nt_space
            if r6
              r5 = r6
            else
              r5 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r5
            if r5
              r8 = _nt_not_keyword
              if r8
                r7 = r8
              else
                r7 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r7
              if r7
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  if has_terminal?(@regexps[gr = '\A[Aa]'] ||= Regexp.new(gr), :regexp, index)
                    r11 = true
                    @index += 1
                  else
                    terminal_parse_failure('[Aa]')
                    r11 = nil
                  end
                  s0 << r11
                  if r11
                    r13 = _nt_space
                    if r13
                      r12 = r13
                    else
                      r12 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r12
                    if r12
                      r14 = _nt_set_keyword
                      s0 << r14
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(IsASetCondition0)
        r0.extend(IsASetCondition1)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:is_a_set_condition][start_index] = r0

      r0
    end

    module IsEmptyCondition0
      def nested_table
        elements[0]
      end

      def is_keyword
        elements[2]
      end

      def not_keyword
        elements[4]
      end

      def empty_keyword
        elements[6]
      end
    end

    module IsEmptyCondition1
      def ast
        OracleSqlParser::Ast::IsEmptyCondition[
          target: nested_table.ast,
          is: is_keyword.ast,
          not: not_keyword.ast,
          empty: empty_keyword.ast
        ]
      end
    end

    def _nt_is_empty_condition
      start_index = index
      if node_cache[:is_empty_condition].has_key?(index)
        cached = node_cache[:is_empty_condition][index]
        if cached
          node_cache[:is_empty_condition][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_nested_table
      s0 << r1
      if r1
        r3 = _nt_space
        if r3
          r2 = r3
        else
          r2 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r2
        if r2
          r4 = _nt_is_keyword
          s0 << r4
          if r4
            r6 = _nt_space
            if r6
              r5 = r6
            else
              r5 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r5
            if r5
              r8 = _nt_not_keyword
              if r8
                r7 = r8
              else
                r7 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r7
              if r7
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  r11 = _nt_empty_keyword
                  s0 << r11
                end
              end
            end
          end
        end
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(IsEmptyCondition0)
        r0.extend(IsEmptyCondition1)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:is_empty_condition][start_index] = r0

      r0
    end

    module MemberCondition0
      def expr
        elements[0]
      end

      def not_keyword
        elements[2]
      end

      def member_keyword
        elements[4]
      end

      def of_keyword
        elements[6]
      end

      def nested_table
        elements[8]
      end
    end

    module MemberCondition1
      def ast
        OracleSqlParser::Ast::MemberCondition[
          target: expr.ast,
          not: not_keyword.ast,
          member: member_keyword.ast,
          of: of_keyword.ast,
          table: nested_table.ast
        ]
      end
    end

    def _nt_member_condition
      start_index = index
      if node_cache[:member_condition].has_key?(index)
        cached = node_cache[:member_condition][index]
        if cached
          node_cache[:member_condition][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_expr
      s0 << r1
      if r1
        r3 = _nt_space
        if r3
          r2 = r3
        else
          r2 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r2
        if r2
          r5 = _nt_not_keyword
          if r5
            r4 = r5
          else
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
          if r4
            r7 = _nt_space
            if r7
              r6 = r7
            else
              r6 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r6
            if r6
              r8 = _nt_member_keyword
              s0 << r8
              if r8
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  r11 = _nt_of_keyword
                  s0 << r11
                  if r11
                    r13 = _nt_space
                    if r13
                      r12 = r13
                    else
                      r12 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r12
                    if r12
                      r14 = _nt_nested_table
                      s0 << r14
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(MemberCondition0)
        r0.extend(MemberCondition1)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:member_condition][start_index] = r0

      r0
    end

    module SubmultisetCondition0
      def table1
        elements[0]
      end

      def not_keyword
        elements[2]
      end

      def submultiset_keyword
        elements[4]
      end

      def of_keyword
        elements[6]
      end

      def table2
        elements[8]
      end
    end

    module SubmultisetCondition1
      def ast
        OracleSqlParser::Ast::SubmultisetCondition[
          target: table1.ast,
          not: not_keyword.ast,
          submultiset: submultiset_keyword.ast,
          of: of_keyword.ast,
          table: table2.ast
        ]
      end
    end

    def _nt_submultiset_condition
      start_index = index
      if node_cache[:submultiset_condition].has_key?(index)
        cached = node_cache[:submultiset_condition][index]
        if cached
          node_cache[:submultiset_condition][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_nested_table
      s0 << r1
      if r1
        r3 = _nt_space
        if r3
          r2 = r3
        else
          r2 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r2
        if r2
          r5 = _nt_not_keyword
          if r5
            r4 = r5
          else
            r4 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r4
          if r4
            r7 = _nt_space
            if r7
              r6 = r7
            else
              r6 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r6
            if r6
              r8 = _nt_submultiset_keyword
              s0 << r8
              if r8
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  r12 = _nt_of_keyword
                  if r12
                    r11 = r12
                  else
                    r11 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r11
                  if r11
                    r14 = _nt_space
                    if r14
                      r13 = r14
                    else
                      r13 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r13
                    if r13
                      r15 = _nt_nested_table
                      s0 << r15
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(SubmultisetCondition0)
        r0.extend(SubmultisetCondition1)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:submultiset_condition][start_index] = r0

      r0
    end

    module NestedTable0
      def ast
        super
      end
    end

    def _nt_nested_table
      start_index = index
      if node_cache[:nested_table].has_key?(index)
        cached = node_cache[:nested_table][index]
        if cached
          node_cache[:nested_table][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      r0 = _nt_ident
      r0.extend(NestedTable0)
      r0.extend(NestedTable0)

      node_cache[:nested_table][start_index] = r0

      r0
    end


    class Parser < Treetop::Runtime::CompiledParser
      include Multiset
    end
  end

  (remove_const(:MultisetParser) if const_defined?(:MultisetParser)) rescue nil; MultisetParser = Multiset::Parser

end

